--- a/Italian/main/MiuiVideo.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiVideo.apk/res/values-it/strings.xml
@@ -22,11 +22,11 @@
     <string name="toast_back_key_pressed_notice">Premi indietro per uscire.</string>
     <string name="adjust_position_prev_media_notice">Anteprima</string>
     <string name="adjust_position_next_media_notice">Avanti</string>
-    <string name="loading_video_netplay_label">Caricamento, attendere prego...</string>
-    <string name="buffering">Creazione buffer...</string>
+    <string name="loading_video_netplay_label">Caricamento, attendere prego…</string>
+    <string name="buffering">Creazione buffer…</string>
     <string name="airkan_video_playing_in">Video in</string>
     <string name="airkan_video_playing">riproduzione</string>
-    <string name="airkan_tips">"Premi qui per trasmettere il videosu box o TV"</string>
+    <string name="airkan_tips">"Premi qui per trasmettere il video su box o TV"</string>
     <string name="menu_item_orientation_auto_sensor_action">Abilita Rotazione</string>
     <string name="menu_item_orientation_fixed_by_videosize_action">Disabilita Rotazione</string>
     <string name="menu_item_sub_title">Sottotitoli</string>
@@ -35,10 +35,10 @@
     <string name="toast_message_continue_play_minute">min</string>
     <string name="toast_message_continue_play_second_and_play">sec</string>
     <string name="vp_VideoView_error_network_not_available">Rete non disponibile</string>
-    <string name="top_status_local_media">Media locale</string>
+    <string name="top_status_local_media">Media locali</string>
     <string name="top_status_online_media">Media online</string>
-    <string name="loading_video_netplay_label_v5">Caricamento stream, attendere prego...</string>
-    <string name="buffering_video_netplay_label_v5">Creazione buffer...</string>
+    <string name="loading_video_netplay_label_v5">Caricamento stream, attendere prego…</string>
+    <string name="buffering_video_netplay_label_v5">Creazione buffer…</string>
     <string name="to_be_play_label_v5">Inizio riproduzione</string>
     <string name="episode_suffix">Il primo di %d</string>
     <string name="about_version_label">Versione:</string>
@@ -64,12 +64,12 @@
     <string name="vp_back">Indietro</string>
     <string name="vp_loading">Caricamento in corso…</string>
     <string name="vp_select_source">Seleziona sorgente</string>
-    <string name="vp_select_ci">Seleziona ep</string>
+    <string name="vp_select_ci">Seleziona ep.</string>
     <string name="vp_offline">Offline</string>
     <string name="vp_milink">MiLink</string>
     <string name="vp_function">Impostazioni</string>
-    <string name="vp_select_video_source">Select source</string>
-    <string name="vp_select_ep">Seleziona ep</string>
+    <string name="vp_select_video_source">Seleziona sorgente</string>
+    <string name="vp_select_ep">Seleziona ep.</string>
     <string name="vp_device_list">Lista dispositivi</string>
     <string name="vp_select_function">Seleziona funzione</string>
     <string name="vp_media_info">Mostra info sul video</string>
@@ -84,66 +84,66 @@
     <string name="vp_using_4_3">Forza 4:3</string>
     <string name="local_media">Video locali</string>
     <string name="count_ge_favorite">preferito da %d</string>
-    <string name="userdata_alert_title">Data usage</string>
-    <string name="userdata_alert_content">You are currently using data network, may produce a lot of traffic fees, sure you want to continue?</string>
-    <string name="userdata_alert_ok">Continue</string>
-    <string name="check_network">"Can't connect to the network. Check your data connection and try again."</string>
+    <string name="userdata_alert_title">YUtilizzo dati</string>
+    <string name="userdata_alert_content">Attualmente stai usando la rete dati, potrebbe comportare dei costi elevati, sei certo di voler proseguire?</string>
+    <string name="userdata_alert_ok">Continua</string>
+    <string name="check_network">Impossibile connettersi alla rete. Verifica la tua connessione dati e riprova</string>
     <string name="search">Cerca</string>
     <string name="count_get_result">%d Risultati</string>
     <string name="search_result_input_hint">Prego inserire la parola chiave da cercare</string>
     <string name="search_result_hint">%s risultati della ricerca</string>
     <string name="search_result_empty_text">Nessun risultato</string>
-    <string name="search_recommend_media_hint">Recommended for you</string>
-    <string name="search_recommend_word_hint">Trending</string>
-    <string name="search_recommend_empty">"Didn't find anything"</string>
-    <string name="filter_program">Filter</string>
+    <string name="search_recommend_media_hint">Consigliati per te</string>
+    <string name="search_recommend_word_hint">Di tendenza</string>
+    <string name="search_recommend_empty">Nessun risultato trovato</string>
+    <string name="filter_program">Filtro</string>
     <string name="online_video">Online</string>
     <string name="my_video">Locali</string>
     <string name="search_online_video">Ricerca video online</string>
     <string name="declaration_content">Vuoi accettare  i termini della Sohu Video, iQiyi, e altri fornitori video?</string>
     <string name="declaration">"Termini d'uso"</string>
-    <string name="no_longer_tips">"Don't show again"</string>
+    <string name="no_longer_tips">"Ricorda la mia scelta"</string>
     <string name="more">Altro</string>
     <string name="local_video">Locali</string>
-    <string name="my_favorite">Starred</string>
+    <string name="my_favorite">Preferiti</string>
     <string name="my_offline">Offline</string>
-    <string name="play_history">Recentemente visti</string>
-    <string name="addon">" plugins"</string>
-    <string name="share_device">Shared device</string>
-    <string name="not_login">Not signed in</string>
-    <string name="click_to_login">Touch image to sign in</string>
-    <string name="gong_count_ge">%d total</string>
-    <string name="installed_count_ge">%d installed</string>
-    <string name="count_ge_device">%d devices</string>
+    <string name="play_history">Visti di recente</string>
+    <string name="addon">" plugin"</string>
+    <string name="share_device">Dispositivo condiviso</string>
+    <string name="not_login">Accesso non eseguito</string>
+    <string name="click_to_login">"Tocca l'immagine per accedere"</string>
+    <string name="gong_count_ge">%d totale</string>
+    <string name="installed_count_ge">%d installati</string>
+    <string name="count_ge_device">%d dispositivi</string>
     <string name="play_his_empty_hint">Nessuna cronologia</string>
     <string name="delete">Elimina</string>
     <string name="today">Oggi</string>
     <string name="yesterday">Ieri</string>
-    <string name="addon_all">All</string>
-    <string name="installed">Installed</string>
-    <string name="addon_list_empty_hint">Empty</string>
-    <string name="addon_installed_empty_hint">Empty</string>
-    <string name="device_empty_hint">Empty</string>
-    <string name="device_media_empty_hint">Empty</string>
+    <string name="addon_all">Tutti</string>
+    <string name="installed">Installati</string>
+    <string name="addon_list_empty_hint">Vuoto</string>
+    <string name="addon_installed_empty_hint">Vuoto</string>
+    <string name="device_empty_hint">Vuoto</string>
+    <string name="device_media_empty_hint">Vuoto</string>
     <string name="imports">Importati</string>
     <string name="local_media_empty_hint">Nessun video locale</string>
-    <string name="edit">Modif.</string>
+    <string name="edit">Modifica</string>
     <string name="local_favorite_empty_hint">Nessun preferito</string>
-    <string name="unfavorite">Unstar</string>
-    <string name="guess_you_like">Recommended for you</string>
-    <string name="recent_play">Recently played: Ep.%d</string>
-    <string name="see_all">See all</string>
-    <string name="all_ep">All ep</string>
-    <string name="gong_count_ji">%d Ep. total</string>
-    <string name="hot_recommend">Trending</string>
+    <string name="unfavorite">Non preferito</string>
+    <string name="guess_you_like">Consigli per te</string>
+    <string name="recent_play">Riprodotti di recente: Ep.%d</string>
+    <string name="see_all">Vedi tutti</string>
+    <string name="all_ep">Tutti gli ep.</string>
+    <string name="gong_count_ji">%d ep. totali</string>
+    <string name="hot_recommend">Di tendenza</string>
     <string name="elipsis">…</string>
     <string name="play">Inzia</string>
-    <string name="connecting">Connecting</string>
+    <string name="connecting">Connessione</string>
     <string name="episode">Episodio</string>
     <string name="introduce">Riassunto</string>
     <string name="comment">Commenti</string>
     <string name="recommend">Raccomandato</string>
-    <string name="director_colon">Direttore：</string>
+    <string name="director_colon">Regista</string>
     <string name="actor_colon">Attore：</string>
     <string name="area_colon">Paese：</string>
     <string name="time_colon">Data：</string>
@@ -168,7 +168,7 @@
     <string name="play_count_ci">%d played</string>
     <string name="tv_channel_empty_hint">Nessun canale</string>
     <string name="defaults">Default</string>
-    <string name="fullscreen">Fullscreen</string>
+    <string name="fullscreen">Schemo intero</string>
     <string name="feature">Consigliati</string>
     <string name="count_ge_feature">%d selezionati</string>
     <string name="feature_list_empty_hint">Lista consigli vuota</string>
@@ -186,11 +186,11 @@
     <string name="negative_comment">Commenti negativi</string>
     <string name="comment_review_list_empty_hint">Nessun commento</string>
     <string name="xiaomi_user">Utente</string>
-    <string name="star5">5 stars</string>
-    <string name="star4">4 stars</string>
-    <string name="star3">3 stars</string>
-    <string name="star2">2 stars</string>
-    <string name="star1">1 star</string>
+    <string name="star5">5 stelle</string>
+    <string name="star4">4 stelle</string>
+    <string name="star3">3 stelle</string>
+    <string name="star2">2 stelle</string>
+    <string name="star1">1 stella</string>
     <string name="send">Invia</string>
     <string name="media_name_comment">%s commento</string>
     <string name="comment_edit_et_hint">Prego inserire il commento</string>
@@ -198,7 +198,7 @@
     <string name="comment_edit_start_hint">Clicca una stella per votare:</string>
     <string name="comment_count_less_tip">Devi scrivere almeno d% caratteri</string>
     <string name="comment_count_much_tip">Il tuo commento non può eccedere i d% carattero</string>
-    <string name="click_star_rate">Click on the star rating</string>
+    <string name="click_star_rate">Clicca una stella per votare</string>
     <string name="offline_no_source">Nessuna origine cache può essere avviata</string>
     <string name="download_is_in_tasklist">È stato inserito nella lista cache</string>
     <string name="download_is_success">"E' stato memorizzato nella cache"</string>
@@ -210,20 +210,20 @@
     <string name="select_offline_media">Seleziona cache multimediale offline</string>
     <string name="manage_offline_media">Gestione cache multimediale offline</string>
     <string name="manage">Gestisci</string>
-    <string name="done">Done</string>
+    <string name="done">Fatto</string>
     <string name="download_select_more">Aumenta cache</string>
-   <string name="offline_media_empty_hint">Empty</string>
-    <string name="all_media">All media</string>
-    <string name="select_all">S.tutti</string>
-    <string name="select_none">D.tutti</string>
+    <string name="offline_media_empty_hint">Vuoto</string>
+    <string name="all_media">Tutti i media</string>
+    <string name="select_all">S. tutti</string>
+    <string name="select_none">D. tutti</string>
     <string name="select_count_xiang">%d selezionato</string>
     <string name="setting">Impostazioni</string>
     <string name="offline_setting">Video offline</string>
     <string name="use_cellular_network">Usa la rete cellulare</string>
-    <string name="use_cellular_network_summary">utilizza la rete cellulare per scaricare i video, questo comporterà costi molto elevati di traffico dati.</string>
+    <string name="use_cellular_network_summary">Utilizza la rete cellulare per scaricare i video, questo comporterà costi molto elevati di traffico dati.</string>
     <string name="mipush_setting">Xiaomi push</string>
-    <string name="receive_mipush">Receive xiaomi push</string>
-    <string name="receive_mipush_summary">Receive notifications about new and updated online content</string>
+    <string name="receive_mipush">Ricezione push Xiaomi</string>
+    <string name="receive_mipush_summary">Riceve notifiche di contenuti online nuovi o aggiornati</string>
     <string name="other_setting">Altri</string>
     <string name="clear_cache">Cancella la cache delle immagini</string>
     <string name="clear_cache_summary">Cancella le immagini memorizzate nella cache dal browser Video</string>
@@ -263,15 +263,15 @@
     <string name="download_error">Errore di scaricamento</string>
     <string name="download_file_fail">Local file access failed, maybe there is no space on SD card</string>
     <string name="offline_max_promote">In attesa della cache, Si possono eseguire al massimo due compiti di cache allo stesso tempo.</string>
-    <string name="addon_category">Addons</string>
-    <string name="add_more_addons">Add more addons</string>
-    <string name="pick_addon_to_delete">choose items</string>
-    <string name="delete_addon">Delete</string>
-    <string name="delete_addon_content">Delete this item?</string>
-    <string name="install_comfirm">Tap to install</string>
-    <string name="start_addon">start addon</string>
-    <string name="addon_install_complete_disc">%s addons installed. You can view them in /My videos/.</string>
-    <string name="addon_update_desc">New version found, update now?</string>
+    <string name="addon_category">Addon</string>
+    <string name="add_more_addons">Aggiungi altri addon</string>
+    <string name="pick_addon_to_delete">Scegli elemento</string>
+    <string name="delete_addon">Cancella</string>
+    <string name="delete_addon_content">Cancellare questo elemento?</string>
+    <string name="install_comfirm">Tocca per installare</string>
+    <string name="start_addon">Avvia addon</string>
+    <string name="addon_install_complete_disc">%s addon installati. Puoi vederli in /I miei video/.</string>
+    <string name="addon_update_desc">"E' disponibile una nuova versione, aggiornae ora?"</string>
     <string name="upgrade">Upgrade</string>
     <string name="sdcard_storage">Memoria interna</string>
     <string name="disk_volume">Rimuovi memoria</string>
@@ -283,8 +283,8 @@
     <string name="myfavorite">Preferiti</string>
     <string name="recentplay">Video recenti</string>
     <string name="mycamera">Miei video</string>
-    <string name="dlna_name">Shared device</string>
-    <string name="dlna_list_name">DLNA device</string>
+    <string name="dlna_name">Dispositivo condivisio</string>
+    <string name="dlna_list_name">Dispositivo DLNA</string>
     <string name="myfavorite_onlylocal">Preferiti</string>
     <string name="login_tip_title">Accedi</string>
     <string name="login_tip_content">Accedi con il tuo account Xiaomi per sincronizzare e aggiornarti sui i contenuti che stai seguendo.</string>
