--- a/Italian/main/miui.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/miui.apk/res/values-it-rIT/strings.xml
@@ -3,7 +3,7 @@
     <string name="label">MIUI SDK</string>
     <string name="send">Invia</string>
     <string name="close">Chiudi</string>
-    <string name="abc_action_bar_up_description">Naviga sopra</string>
+    <string name="abc_action_bar_up_description">Livello superiore</string>
     <string name="abc_action_bar_home_description">Naviga in home</string>
     <string name="action_mode_select_all">Seleziona tutto</string>
     <string name="action_mode_deselect_all">Deseleziona tutto</string>
@@ -40,9 +40,9 @@
     <string name="privacy_policy">Accordo privacy</string>
     <string name="mibi_license">Accordo MiCredit</string>
     <string name="user_manual">Guida utente</string>
-    <string name="license_host_unreachable">Impossibile collegarsi alla rete. Tper leggere queste informazioni vai su %s.</string>
+    <string name="license_host_unreachable">Impossibile collegarsi alla rete. Per leggere queste informazioni vai su %s.</string>
     <string name="perm_payment_lab">Servizio di pagamento Xiaomi</string>
-    <string name="perm_payment_dspt">COnsenti alle applicazioni di effettuare pagamenti tramite il servizio di pagamento Xiaomi</string>
+    <string name="perm_payment_dspt">Consenti alle applicazioni di effettuare pagamenti tramite il servizio di pagamento Xiaomi</string>
     <string name="sync_one_time_sync">Tocca per sincronizzare （ %1$s )</string>
     <string name="no_sim">Nessuna SIM selezionata.</string>
     <string name="activating">Attivazione…</string>
@@ -67,30 +67,30 @@
     <string name="select_item">Seleziona elementi</string>
     <string name="more">Altro</string>
     <string name="empty" />
-    <string name="solar_term_slight_cold">Slight Cold</string>
-    <string name="solar_term_great_cold">Great Cold</string>
-    <string name="solar_term_spring_begins">Spring Begins</string>
-    <string name="solar_term_the_rains">The Rains</string>
-    <string name="solar_term_insects_awaken">Insects Awaken</string>
-    <string name="solar_term_vernal_equinox">Vernal Equinox</string>
-    <string name="solar_term_clear_and_bright">Clear and Bright</string>
-    <string name="solar_term_grain_rain">Grain Rain</string>
-    <string name="solar_term_summer_begins">Summer Begins</string>
-    <string name="solar_term_grain_buds">Grain Buds</string>
-    <string name="solar_term_grain_in_ear">Grain in Ear</string>
-    <string name="solar_term_summer_solstice">Summer Solstice</string>
-    <string name="solar_term_slight_heat">Slight Heat</string>
-    <string name="solar_term_great_heat">Great Heat</string>
-    <string name="solar_term_autumn_begins">Autumn Begins</string>
-    <string name="solar_term_stopping_the_heat">Stopping the Heat</string>
-    <string name="solar_term_white_dews">White Dews</string>
-    <string name="solar_term_autumn_equinox">Autumn Equinox</string>
-    <string name="solar_term_cold_dews">Cold Dews</string>
-    <string name="solar_term_hoar_frost_falls">Hoar Frost Falls</string>
-    <string name="solar_term_winter_begins">Winter Begins</string>
-    <string name="solar_term_light_snow">Light Snow</string>
-    <string name="solar_term_heavy_snow">Heavy Snow</string>
-    <string name="solar_term_winter_solstice">Winter Solstice</string>
+    <string name="solar_term_slight_cold">Leggermente freddo</string>
+    <string name="solar_term_great_cold">Freddo inteso</string>
+    <string name="solar_term_spring_begins">Inizio della primaversa</string>
+    <string name="solar_term_the_rains">Le pioggie</string>
+    <string name="solar_term_insects_awaken">Risveglio degli insetti</string>
+    <string name="solar_term_vernal_equinox">Equinozio di primaversa</string>
+    <string name="solar_term_clear_and_bright">Sereno e luminoso</string>
+    <string name="solar_term_grain_rain">Grandi pioggie</string>
+    <string name="solar_term_summer_begins">"Inizio dell'estate"</string>
+    <string name="solar_term_grain_buds">Il grano germoglia</string>
+    <string name="solar_term_grain_in_ear">Il grano ha le pannocchie</string>
+    <string name="solar_term_summer_solstice">Solstizio estivo</string>
+    <string name="solar_term_slight_heat">Leggermente caldo</string>
+    <string name="solar_term_great_heat">Caldo intenso</string>
+    <string name="solar_term_autumn_begins">"Inizio dell'autunno"</string>
+    <string name="solar_term_stopping_the_heat">Finisce il caldo</string>
+    <string name="solar_term_white_dews">Rugiada bianca</string>
+    <string name="solar_term_autumn_equinox">"Equinozio d'autunno"</string>
+    <string name="solar_term_cold_dews">Rugiada gelata</string>
+    <string name="solar_term_hoar_frost_falls">Cade la brina gelata</string>
+    <string name="solar_term_winter_begins">"Inizia dell'inverno"</string>
+    <string name="solar_term_light_snow">Nevicate leggere</string>
+    <string name="solar_term_heavy_snow">Intense nevicate</string>
+    <string name="solar_term_winter_solstice">Solstizio invernale</string>
     <string name="am">AM</string>
     <string name="pm">PM</string>
     <string name="month_january">Gennaio</string>
@@ -129,8 +129,8 @@
     <string name="month_october_shortest">O</string>
     <string name="month_november_shortest">N</string>
     <string name="month_december_shortest">D</string>
-    <string name="eras_bc">BC</string>
-    <string name="eras_ad">AD</string>
+    <string name="eras_bc">AC</string>
+    <string name="eras_ad">DC</string>
     <string name="sunday">Domenica</string>
     <string name="monday">Lunedì</string>
     <string name="tuesday">Martedì</string>
@@ -217,7 +217,7 @@
     <string name="fmt_time_12hour_minute_pm">h:mma</string>
     <string name="fmt_time_12hour_minute_second_pm">h:mm:ss a</string>
     <string name="fmt_time_12hour_minute_second_millis_pm">h:mm:ss.S a</string>
-    <string name="fmt_time_24hour">"H 'o''clock'"</string>
+    <string name="fmt_time_24hour">"H in punto"</string>
     <string name="fmt_time_24hour_minute">H:mm</string>
     <string name="fmt_time_24hour_minute_second">H:mm:ss</string>
     <string name="fmt_time_24hour_minute_second_millis">H:mm:ss.S</string>
