Fix for international prefix strings

--- a/Italian/main/TeleService.apk/res/values-it/strings.xml
+++ b/Italian/main/TeleService.apk/res/values-it/strings.xml
@@ -670,20 +670,20 @@ Riprova o chiama il servizio clienti per altre opzioni."</string>
     <string name="call_record_add_numbers">Aggiungi numeri</string>
     <string name="call_remove_exception_numbers_confirm">%d numeri saranno cancellati.</string>
     <string name="call_record_auto_always">Tutti i numero</string>
-    <string name="autoip">Composizione IP automatica</string>
-    <string name="autoip_prefix">Prefisso IP</string>
-    <string name="autoip_prefix_summary">"Prefisso IP dell'operatore: %s"</string>
-    <string name="autoip_autoip_current_areacode_summary">Codice area attuale: %s</string>
-    <string name="autoip_setting">Impostazioni IP automatico</string>
-    <string name="autoip_summary">Aggiungi un prefisso IP a un numero straniero</string>
-    <string name="autoip_current_areacode">Codice area attuale</string>
-    <string name="autoip_current_areacode_summary">Codice area della tua località attuale</string>
-    <string name="autoip_support_local_numbers">Usa sempre prefisso IP</string>
-    <string name="autoip_add_zero_prefix">Aggiungi il prefisso 0 ai numeri di cellulare</string>
-    <string name="autoip_exception">Numeri che non richiedo un prefisso IP</string>
+    <string name="autoip">Composizione PI automatica</string>
+    <string name="autoip_prefix">Prefisso internazionale</string>
+    <string name="autoip_prefix_summary">"Prefisso intenazionale del tuo operatore: %s"</string>
+    <string name="autoip_autoip_current_areacode_summary">Prefisso internazionale della località dove ti trovi ora: %s</string>
+    <string name="autoip_setting">Impostazioni PI automatico</string>
+    <string name="autoip_summary">Aggiungi un prefisso int. ai numeri stranieri</string>
+    <string name="autoip_current_areacode">Pref. intern. locale</string>
+    <string name="autoip_current_areacode_summary">Prefisso internazionale della località dove ti trovi ora</string>
+    <string name="autoip_support_local_numbers">Usa sempre prefisso internaz.</string>
+    <string name="autoip_add_zero_prefix">Antemponi lo 0 ai numeri di cellulare</string>
+    <string name="autoip_exception">Numeri che non richiedo un PI</string>
     <string name="autoip_exception_summary">%d totali</string>
     <string name="autoip_exception_summary_more">,… %d totali</string>
-    <string name="autoip_no_exceptions">Aggiungi numeri che non richiedono un prefisso IP</string>
+    <string name="autoip_no_exceptions">Aggiungi qui i numeri che a cui non bisogna anteporre il prefisso internazionale</string>
     <string name="autoip_areacode_required">Codice area richiesto</string>
     <string name="autoip_areacode_required_accept">OK</string>
     <string name="emergency_call_area_code_edit_dialog_hint">Imposta prefisso area</string>
