--- a/Italian/main/Contacts.apk/res/values-it/strings.xml
+++ b/Italian/main/Contacts.apk/res/values-it/strings.xml
@@ -869,9 +869,9 @@ Tocca l'icona Unisci in basso per iniziare."</string>
     <string name="preference_telocation_summary_countrycode_off">Non comporre automaticamente il prefisso internazionale</string>
     <string name="preference_phone">Telefono</string>
     <string name="preference_dial_pad_touch_tone_title">Tono al tocco del tastierino</string>
-    <string name="preference_auto_ip_title">Prefisso IP automatico</string>
+    <string name="preference_auto_ip_title">Prefisso internaz. automatico</string>
     <string name="preference_auto_ip_summary_disable">Disabilitato</string>
-    <string name="preference_auto_ip_summary_on">"Prefisso IP dell'operatore: %s"</string>
+    <string name="preference_auto_ip_summary_on">"Pref. intern. della tua nazione: %s"</string>
     <string name="preference_phone_more_title">Impostazioni chiamate</string>
     <string name="preference_dial_pad_touch_tone_switch">Toni al tocco del tastierino</string>
     <string name="preference_tone_title">Toni</string>
