--- a/Italian/main/framework-miui-res.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/framework-miui-res.apk/res/values-it-rIT/strings.xml
@@ -26,7 +26,7 @@
     <string name="first_back_long_press_message">Vuoi abilitare la funzione long-press del tasto Indietro per chiudere il porcesso attuale ed i servizi in background associati? Abilita da Impostazioni > Sistema > Tasto Impostazioni</string>
     <string name="force_exit_message">\"%1$s\" chiuso correttamente</string>
     <string name="screen_button_notification_title">Tasti schermo disabilitati</string>
-    <string name="screen_button_notification_text">"Premi 'Home'+'Power' abilitare"</string>
+    <string name="screen_button_notification_text">"Premi 'Home'+'Power' per abilitare"</string>
     <string name="perm_send_push_dspt">"Consenti l'invio di messagi push Xiaomi"</string>
     <string name="perm_send_push_lab">Invia messaggio push</string>
     <string name="solar_calendar" />
